force-app/main/default/objects/QuoteLineItem/fields/Discount_Given__c.field-meta.xml
<CustomField>
    <fullName>Discount_Given__c</fullName>
    <label>Discount Given %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>