force-app/main/default/objects/QuoteLineItem/fields/DiscountGiven__c.field-meta.xml
<CustomField>
    <fullName>DiscountGiven__c</fullName>
    <formula>1- ( UnitPrice / PricebookEntry.UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Given (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>