force-app/main/default/objects/QuoteLineItem/fields/Is_this_PS__c.field-meta.xml
<CustomField>
    <fullName>Is_this_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a Service ?</label>
    <type>Checkbox</type>
</CustomField>