force-app/main/default/objects/QuoteLineItem/fields/of_Months__c.field-meta.xml
<CustomField>
    <fullName>of_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <label># of Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>