force-app/main/default/objects/QuoteLineItem/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this item recurring on annually and should therefore be under the recurring subtotal on a quote?</description>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>