force-app/main/default/objects/QuoteLineItem/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Quantity*Sale Price*number of months</description>
    <formula>if( OR(of_Months__c =0,ISBLANK(of_Months__c)) ,  Quantity* UnitPrice  ,  Quantity* UnitPrice*of_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity*Sale Price*number of months</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>