force-app/main/default/objects/QuoteLineItem/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Created this field to show on the Quote Template. Becasue field name could not be renamed from &apos;Sales price&apos; to Unit Price on the quote template.</description>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales price</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>